# vcf2pandas

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: vcf1.vcf  vcf1_all.txt  vcf2.vcf  vcf2_all.txt  vcf3.txt  vcf3.vcf  vcf3_all.txt  vcf3_all_remove_empty_columns.txt  vcf3_everything_renamed.txt  vcf3_renamed.txt  vcf3_sample_and_format_renamed.txt  vcf3_sample_list_format_dict_renamed.txt  vcf3_selected.txt
tests/: run_examples.py  test_vcf2pandas.py
tests/vcfs/: minimal_vcf.vcf
vcf2pandas/: __init__.py  vcf2pandas.py
