[tool.poetry]
name = "vcf2pandas"
version = "0.0.1"
description = "Package to convert a vcf into a pandas dataframe."
authors = ["Trent Zeng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pysam = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
