[tool.poetry]
name = "vcf2pandas"
version = "0.1.2"
description = "Package to convert a vcf into a pandas dataframe."
authors = ["Trent Zeng"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trentzz/vcf2pandas"
keywords = ["vcf", "python", "pandas"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
pysam = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
